<resources>
    <string name="app_name">Event Timer</string>
    <string name="title_activity_sessions">Sessions</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="unnamed_session">Not Named</string>
    <string name="floating_action_button_desc">Floating Action Button</string>
    <string name="not_running_label">Not running</string>
    <string name="session_delete_prompt">Deleting %d sessions.  This cannot be undone.  Continue?</string>
    <string name="confirm">Confirm</string>
    <string name="delete_prompt">All existing data will be deleted and it may take a while</string>
    <string name="restoring_database_progress_text">Restoring&#8230;\n(Can take a long time)</string>
    <string name="select_replace_database">Select replacement database</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_select_device">Select Device</string>
    <string name="menu_test">Test</string>
    <string name="menu_plot">Plot</string>
    <string name="menu_discard">Discard Sessions</string>
    <string name="menu_merge">Merge</string>
    <string name="menu_split">Split</string>
    <string name="menu_save">Save Sessions</string>
    <string name="menu_copy">Copy Summaries</string>
    <string name="next_day">Use next day</string>
    <string name="menu_custom">Add Custom Event</string>
    <string name="menu_save_summaries">Save Summaries</string>
    <string name="menu_session_manager">Session Manager</string>
    <string name="menu_check_all">Check All</string>
    <string name="menu_check_none">Check None</string>
    <string name="menu_save_database_cvs">Save Database as CSV</string>
    <string name="menu_restore_database_cvs">Restore Database from CSV</string>
    <string name="menu_add_session_from_cvs">Add Session from CSV</string>
    <string name="menu_save_database">Save Database</string>
    <string name="menu_restore_database">Replace Database</string>
    <string name="menu_restoring">Restoring</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_read_battery_level">Get Battery level</string>
    <string name="info_item">Info</string>
    <string name="choose_data_directory_item">Choose Data Directory</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="record">Record</string>
    <string name="event_info">Time: %1$s\nStart Time: %2$s\nEnd Time: %3$s\nEvents: %4$s\nElapsed Time: %5$s\n</string>
    <string name="clipboard_written">Summaries were copied to the Clipboard</string>


    <!-- Info/Help -->
    <string name="help_url_not_found">Cannot find Help URL</string>
    <string name="help_item">Help</string>
    <string name="help_title">Help</string>
    <string name="help_show_error">Error showing help</string>

    <!-- Utils -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="exception">Exception</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s
    </string>
</resources>