<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.kenevans.android.blecardiacmonitor.SessionManagerActivity">
    <item
        android:id="@+id/menu_save"
        android:checkable="false"
        android:orderInCategory="1"
        android:title="@string/menu_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_save_summaries"
        android:checkable="false"
        android:orderInCategory="2"
        android:title="@string/menu_save_summaries"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_discard"
        android:checkable="false"
        android:orderInCategory="3"
        android:title="@string/menu_discard"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_check_all"
        android:checkable="false"
        android:orderInCategory="4"
        android:title="@string/menu_check_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_check_none"
        android:checkable="false"
        android:orderInCategory="5"
        android:title="@string/menu_check_none"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_session_from_cvs"
        android:checkable="false"
        android:orderInCategory="6"
        android:title="@string/menu_add_session_from_cvs"
        app:showAsAction="never" />
    <item
        android:id="@+id/info"
        android:orderInCategory="7"
        android:title="@string/info_item" />
    <item
        android:id="@+id/help"
        android:orderInCategory="8"
        android:title="@string/help_item" />
    <item
        android:id="@+id/menu_save_database"
        android:orderInCategory="9"
        android:title="@string/menu_save_database" />
    <item
        android:id="@+id/menu_replace_database"
        android:orderInCategory="10"
        android:title="@string/menu_restore_database" />
    <item
        android:id="@+id/choose_data_directory"
        android:orderInCategory="10"
        android:title="@string/choose_data_directory_item" />
</menu>
