<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SessionActivity">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:textColor="@color/primary_text_color"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:textColor="@color/primary_text_color"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time" />

    <Button
        android:id="@+id/buttonStart"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:padding="8dp"
        android:text="@string/start"
        android:background="@color/secondary_color"
        app:backgroundTintMode="src_over"
        app:backgroundTint="@color/secondary_color"
        android:textColor="@color/primary_text_color"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/event"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonStop"
        app:layout_constraintHorizontal_bias="0"
        />

    <Button
        android:id="@+id/buttonStop"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:padding="8dp"
        android:text="@string/stop"
        android:background="@color/secondary_color"
        app:backgroundTintMode="src_over"
        app:backgroundTint="@color/secondary_color"
        android:textColor="@color/primary_text_color"
        app:layout_constraintTop_toBottomOf="@id/event"
        app:layout_constraintLeft_toRightOf="@+id/buttonStart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        />

    <ListView android:id="@+id/sessionListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/buttonStart"
        app:layout_constraintBottom_toTopOf="@id/buttonRecord"
        />

    <Button
        android:id="@+id/buttonRecord"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:padding="8dp"
        android:text="@string/record"
        android:background="@color/secondary_color"
        app:backgroundTintMode="src_over"
        app:backgroundTint="@color/secondary_color"
        android:textColor="@color/primary_text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>